# CPP_lessons

./: .clang-tidy  .gitignore  .travis.yml  Array.h  CPPMath_0.cpp  CPPMath_1.cpp  CPPMath_2.cpp  HW 1lesson.odt  LICENSE  List.h  Matrix.h  README.md  Rationals.cpp  Rationals.h  Theory3.txt  Theory_3.odt  containers.h  func_poly_example.cpp  lesson2T.odt  main-14.cpp  main-15.cpp  main-16.cpp  main-17.cpp  main-18.cpp  main-19.cpp  main-20.cpp  main-21.cpp  main.cpp  mainArray.cpp  main_containers.cpp  stack_.h  theory.txt  theory1.txt
1_Home_Work/: 983 try  CPPMath_0 (1).hpp  CPPMath_0.cpp  CPPMath_1.cpp  CPPMath_2.cpp  HW1.txt  Halow woard.cpp  Halowwoard.cpp  Korobeinikov_1_lesson.docx  Korobeinikov_1_lesson.txt  Korobeinikov_1_lesson_theory.txt  README.md  Theor.txt  Theory.txt  Theory_1  desktop.ini  gusev_1_home_work_teor  main (1).cpp  theory__1.txt
1_Lesson/: .clang-tidy  Makefile  auto.cpp  cppswap.cpp  cswap.cpp  multiple_template.cpp  references.cpp  swap_template.cpp
2_Home_Work/: HW2.txt  Korobeinikov_2_lesson_theory.txt  List.h  MakeFile  MakeFile.MakeFile  MakeFile.Makefile.txt  Makefile  README.md  Stack.cpp  Stack.h  Stack02.cpp  Stack02.h  Theory.txt  Theory_2.txt  gusev_2_home_work_teor.txt  main.cpp  main_stack02.cpp  my_Stack.h  stack.cpp  stack.h  theory_2.txt
2_Lesson/: Makefile  String  String.cpp  String.h  simpleClass.cpp  simpleClass.h  testNamespace.cpp  testNamespace.h
2_home_work/: Makefile  Stack.cpp  Stack.h  (+3 more)
8_Lesson/: .clang-tidy  CMakeLists.txt  Makefile
8_Lesson/explicitStack/: CMakeLists.txt  explicitStackTest.cpp
8_Lesson/nonTypeTemplate/: CMakeLists.txt  nonTypeTemplate.h  nonTypeTemplateTest.cpp
8_Lesson/recursiveTemplate/: CMakeLists.txt  recursiveTemplate.h  recursiveTemplateTest.cpp
8_Lesson/simpleTemplate/: CMakeLists.txt  simpleTemplate.h  simpleTemplateTest.cpp
8_Lesson/stack/: CMakeLists.txt  stack.h  stackTest.cpp
sdl/drawLine/: CMakeLists.txt  drawLine.cpp
sdl/libGraph/: CMakeLists.txt  event.cpp  event.h  graphException.h  mediaApp.cpp  mediaApp.h  point2D.cpp  point2D.h  render.cpp  render.h  window.cpp  window.h
sdl/miniPaint/: CMakeLists.txt  miniPaint.cpp
(+238 files in other folders)
